<resources>
    <string name="app_name">Enterprise</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="speak_button">Start speaking</string>
    <string name="action_settings">Settings</string>
    <string name="create">Add</string>
    <string name="add_medium">Add Medium</string>
    <string name="add_list">Add List</string>
    <string name="lists">Lists</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="logout">Logout</string>
    <string name="user_related">User</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_not_matching">This password is does not match the previous one.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="medium">Medium</string>
    <string name="text">Text</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="artist">Artist</string>
    <string name="series">Series</string>
    <string name="universe">Universe</string>
    <string name="language">Language</string>
    <string name="language_of_origin">Language of Origin</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="status_of_translator">Status of Translator</string>
    <string name="status_in_country_of_origin">Status in Country of Origin</string>
    <string name="select_list_to_add_medium_to">Select List to add Medium to</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="title_activity_login_register">LoginRegister</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="unread_chapter">Episodes</string>
    <string name="unread_news">Unread News</string>
    <string name="read_history">Read History</string>
    <string name="statistics">Statistics</string>
    <string name="error_register_failed">Registration failed</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unread_chapter_value">%d Unread Chapter</string>
    <string name="unread_news_value">%d Unread News</string>
    <string name="current_read">%d read today</string>
    <string name="total_read">%d read total</string>
    <string name="internal_lists">%d Internal Lists</string>
    <string name="external_lists">%d External Lists</string>
    <string name="external_user_count">%d External User</string>
    <string name="audio_media">%d Audio</string>
    <string name="video_media">%d Video</string>
    <string name="text_media">%d Text</string>
    <string name="image_media">%d Image</string>
    <string name="unused_media">%d Unused Media</string>
    <string name="no_data_is_available">No Data is available</string>
    <string name="read_status">Read Status</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_test2">Test2</string>
    <string name="title_activity_list_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="auto_download_title">Download unread Chapters automatically</string>
    <string name="list_settings">List Settings</string>
    <string name="medium_settings">Medium Settings</string>
    <string name="item_options">Item Options</string>
    <string name="open_items">Open Items</string>
    <string name="open_toc">Open Toc</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="browse_unused_media">Browse unused Media</string>
    <string name="no_more_load_retry">No more items to load. Refresh to retry.</string>
    <string name="endless_disabled">No more items to load (max reached).</string>
    <string name="endless_cancel">Cancelled by the user.</string>
    <string name="endless_error">An error occurred while loading more items.</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="title_a_z">Title A-Z</string>
    <string name="title_z_a">Title Z-A</string>
    <string name="medium_desc">Medium Desc</string>
    <string name="medium_asc">Medium Asc</string>
    <string name="host_z_a">Host Z-A</string>
    <string name="host_a_z">Host A-Z</string>
    <string name="clear_title_filter">Clear Title Filter</string>
    <string name="clear_host_filter">Clear Host Filter</string>
    <string name="no_title_filter">No Title Filter</string>
    <string name="no_host_filter">No Host Filter</string>
    <string name="add_item_to_list">Add Item to List</string>
    <string name="add_as_new_medium">Add as new Medium</string>
    <string name="ok">OK</string>
    <string name="add_as_toc">Add as Toc</string>
    <string name="remove_item">Remove Item</string>
    <string name="toc_candidates">Toc Candidates:</string>
    <string name="search_for_medium">Search for Medium</string>
    <string name="don_t_add_to_list">Don\'t add to List</string>
    <string name="liste">Liste:</string>
    <string name="standard_list_name">Standard</string>
    <string name="no_author_filter">No Author Filter</string>
    <string name="episodes_read">Episodes read</string>
    <string name="min_episodes">Min Episodes</string>
    <string name="last_updated">Last Updated</string>
    <string name="clear_author_filter">Clear Author Filter</string>
    <string name="group_by_medium">Group By Medium</string>
    <string name="external_user">External User</string>
    <string name="clear_all">Clear all</string>
    <string name="view_selected">View Selected</string>
    <string name="download_now">Download now</string>
    <string name="synch_now">Synch now</string>
    <string name="clear_local_media_data">Clear Local Media Data</string>
    <string name="enable_download_summary">Disabling prevents all Downloads</string>
    <string name="enable_download">Enable Download</string>
    <string name="stop_download_now">Stop Current Downloads</string>
    <string name="group_by_medium_first">Group by Medium First</string>
    <string name="saved_only">Saved Only</string>
    <string name="notification_history">Notification History</string>
    <string name="clear_notification_history">Clear Notification History</string>
    <string name="reset_download_fail_counter">Reset Download Fail Counter</string>
    <string name="font">Font</string>
    <string name="increment_font">Increment Font</string>
    <string name="decrement_font">Decrement Font</string>
    <string name="default_zero">0</string>
    <string name="episode_locked">Episode Locked</string>
    <string name="additional_info">Additional Info</string>
    <string name="release_rate">Release Rate</string>
    <string name="last_episode">Last Episode</string>
    <string name="average_release">Average Release</string>
    <string name="state_tl">Translation State</string>
    <string name="state_origin">State in COO</string>
    <string name="current_read_episode">Seen last</string>
    <string name="not_available">N/A</string>
    <string name="minimal_episode_index">Minimal Episode Index</string>
    <string name="maximal_episode_index">Maximum Episode Index</string>
    <string name="release_host">Release Host</string>
    <string name="latest_release_only">Latest Release Only</string>
    <string name="pref_header_download">Download</string>
    <string name="go_to_item">Go to Item</string>
    <string name="select_all_between">Select all between</string>
    <string name="zero_percent">0%</string>
    <string name="left_navigation">Left Navigation</string>
    <string name="right_navigation">Right Navigation</string>
    <string name="ignore">Ignore</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="saved_status">Saved Status</string>
    <string name="check_saved_now">Check Saved Now</string>
    <string name="name_of_the_medium">Name of the Medium</string>
</resources>