<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home"
        android:title="@string/home" />
    <item
        android:id="@+id/lists"
        android:title="@string/lists" />
    <item
        android:id="@+id/news"
        android:title="@string/news" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/media"
        android:title="@string/medium" />
    <item
        android:id="@+id/add_medium"
        android:title="@string/add_medium" />
    <item
        android:id="@+id/add_list"
        android:title="@string/add_list" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>