<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/open_items_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/open_toc" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="none"
        android:text="@string/name"
        android:hint="@string/name_of_the_medium"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/medium" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/text_medium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <RadioButton
            android:id="@+id/video_medium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/video" />

        <RadioButton
            android:id="@+id/image_medium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/image" />

        <RadioButton
            android:id="@+id/audio_medium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/audio" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/auto_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="5dp"
        android:text="@string/auto_download_title" />

    <TextView
        android:id="@+id/additional_info_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/sharp_border"
        android:text="@string/additional_info"
        app:drawableEndCompat="@drawable/ic_plus_box_dark" />

    <TableLayout
        android:id="@+id/additional_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:visibility="gone"
        android:orientation="vertical">
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/series" />
            <TextView android:id="@+id/series" />
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/universe"/>
            <TextView
                android:id="@+id/universe"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/current_read_episode"/>
            <TextView
                android:id="@+id/currentRead"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/last_episode"/>
            <TextView
                android:id="@+id/lastEpisode"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/last_updated"/>
            <TextView
                android:id="@+id/lastUpdated"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/average_release"/>
            <TextView
                android:id="@+id/average_release"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/author"/>
            <TextView
                android:id="@+id/author"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/artist"/>
            <TextView
                android:id="@+id/artist"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/state_tl"/>
            <TextView
                android:id="@+id/stateTl"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/state_origin"/>
            <TextView
                android:id="@+id/stateOrigin"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/country_of_origin"/>
            <TextView
                android:id="@+id/countryOfOrigin"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow android:background="@drawable/bottom_border">
            <TextView android:text="@string/language_of_origin"/>
            <TextView
                android:id="@+id/languageOfOrigin"
                android:text="@string/not_available"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/language"/>
            <TextView
                android:id="@+id/lang"
                android:text="@string/not_available"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/release_rate_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/sharp_border"
        android:text="@string/release_rate"
        app:drawableEndCompat="@drawable/ic_plus_box_dark" />

    <ViewStub
        android:id="@+id/release_rate_stub"
        android:inflatedId="@id/release_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout="@layout/release_rate_layout" />

</LinearLayout>