<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/title_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:iconifiedByDefault="false"
            app:queryHint="@string/no_title_filter">

        </androidx.appcompat.widget.SearchView>

        <ImageButton
            android:id="@+id/clear_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/ic_close_dark"
            android:contentDescription="@string/clear_title_filter"
            android:maxWidth="1dp"
            android:maxHeight="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/author_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:iconifiedByDefault="false"
            app:queryHint="@string/no_author_filter">

        </androidx.appcompat.widget.SearchView>

        <ImageButton
            android:id="@+id/clear_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/ic_close_dark"
            android:contentDescription="@string/clear_author_filter"
            android:padding="5dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/text_min_episode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/min_episodes"
        android:inputType="numberSigned"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/text_min_episode_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/episodes_read"
        android:inputType="numberSigned"
        tools:ignore="Autofill" />

    <CheckBox
        android:id="@+id/image_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/image" />

    <CheckBox
        android:id="@+id/text_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/text" />

    <CheckBox
        android:id="@+id/video_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/video" />

    <CheckBox
        android:id="@+id/audio_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/audio" />
</LinearLayout>